# colab-gsoc2017-NigelFernandez

./: README.md  aggregate.py  compute_acc.py  detector.c  finding_iou.py  get_test_input.py  transform_labels.py
Code/: accuracy_stats.txt  file_name_list.txt  stat_viz.py  transform_labels.py
cameraview_yolo_py/: CMakeLists.txt  cameraview_yolo.py  cameraview_yolo_py.cfg  cameraview_yolo_py.in
rgbd/: combine_16_morton.py  combine_16_png.py  combine_all_16.py  combine_channel.py  combine_map_16_morton.py  depth_to_colourmap.py  depth_to_colourmap_all.py  display_boxes.py  format_annotations.py  generate_train_and_test_names.py
visualizations_yolot_accuracy/: correct_percent.eps  recall_percent.eps
